move remaining strings to xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="title_activity_export_identity">backup identity</string>
     <string name="import_identity_label">restore identity...</string>
     <string name="export_identity_label">backup identity...</string>
-    <string name="delete_identity">delete identity...</string>
+    <string name="delete_identity_user">delete identity: %s</string>
     <string name="import_identities">restore identity...</string>
     <string name="create_identity_label">create new identity...</string>
     <string name="pref_create_identity">pref_create_identity</string>
@@ -97,5 +97,197 @@
     <string name="about_support"><![CDATA["for questions or support please <a href="https://www.surespot.me/support.html>click here</a> or email <a href="mailto:support@2fours.com">support@2fours.com</a>]]></string>
     <!-- anything in [] for the string below will fire the onclick listener to set the alternate sms delimiter -->
     <string name="invite_text">"Click the select contacts button to select numbers from your phone contacts, and/or enter them manually. (Please [click here] if contacts fail to populate in your sms app)."</string>
+    <string name="notification_title">surespot</string>
+    <string name="notification_message">"%1$s: new message from %2$s"</string>
+    <string name="notification_invite">"%1$s: friend invite from %2$s"</string>
+    <string name="notification_invite_accept">%1$s: %2$s has accepted your friend invite"</string>
+    <string name="about_version">"version: %s"</string>
+    <string name="surespot">surespot</string>
+    <string name="about_action_bar_right">about</string>
+    <string name="identity">identity</string>
+    <string name="auto_backup_action_bar_right">auto backup</string>
+    <string name="invite">invite</string>
+    <string name="no_contact_data_selected_or_entered">no contact data selected or entered</string>
+    <string name="toggled_sms_contact_population_mechanism">toggled sms contact population mechanism</string>
+    <string name="invitation_email_subject">Invitation to chat with me privately via surespot</string>
+    <string name="invite_no_application_found">No application found to handle invite.</string>
+    <string name="invite_progress_text">creating invitation</string>
+    <string name="invite_also_send_to">also send to (comma separated):</string>
+    <string name="invite_not_used">not used</string>
+    <string name="invite_select_contacts">select contacts</string>
+    <string name="email">email</string>
+    <string name="sms">sms</string>
+    <string name="social">social</string>
+    <string name="unknown">unknown</string>
+    <string name="login">login</string>
+    <string name="login_progress">logging in</string>
+    <string name="login_check_password">Could not login, please make sure your password is correct.</string>
+    <string name="login_try_again_later">Error logging in, please try again later.</string>
+    <string name="login_max_identities_reached">Sorry, you have already created the maximum number of identities (%d).\n\nIdentities can be deleted from the settings menu after logging in.</string>
+    <string name="local_cache_cleared">local cache cleared</string>
+    <string name="qr_pre_username_help">scanning this QR code will invite</string>
+    <string name="qr_post_username_help">to be a friend on surespot, installing surespot from the play store if necessary</string>
+    <string name="send">send</string>
+    <string name="main_action_bar_right">select recipient</string>
+    <string name="could_not_upload_friend_image">could not upload friend image</string>
+    <string name="delete_all_confirmation">are you sure you wish to delete all messages?</string>
+    <string name="delete_all_title">delete all messages</string>
+    <string name="ok">ok</string>
+    <string name="cancel">cancel</string>
+    <string name="friend_self_error">Unfortunately you can\'t be friends with yourself.</string>
+    <string name="has_been_invited">%s has been invited to be your friend.</string>
+    <string name="has_accepted">%s has accepted your friend request.</string>
+    <string name="user_does_not_exist">User does not exist.</string>
+    <string name="you_are_already_friends">You are already friends.</string>
+    <string name="already_invited">You have already invited this user.</string>
+    <string name="could_not_invite">Could not invite friend, please try again later.</string>
+    <string name="keys">keys</string>
+    <string name="generating_keys_progress">generating and uploading new keys</string>
+    <string name="backup_identities_again">After performing this operation any backed up identities will no longer be able to be restored so make sure you backup your identity again!</string>
+    <string name="create_new_keys_for">create new keys for %s</string>
+    <string name="enter_password_for">enter password for %s</string>
+    <string name="enter_username_and_password">Please enter a username and password.</string>
+    <string name="usernames_case_sensitive">Usernames are case sensitive</string>
+    <string name="aware_username_password">so please be aware of this when sharing them with others. The password should be at least 8 characters long and contain funky characters in weird places.</string>
+    <string name="warning_password_reset">WARNING: There is no password reset functionality in surespot so make sure you remember it!</string>
+    <string name="create_user_progress">creating a user and generating key pairs</string>
+    <string name="create">create</string>
+    <string name="passwords_do_not_match">passwords do not match</string>
+    <string name="username_exists">That username already exists, please choose another.</string>
+    <string name="user_creation_throttled">too many user creation attempts, try again later</string>
+    <string name="signup_update">please update surespot to create a new user</string>
+    <string name="could_not_create_user">could not create user, please try again later</string>
+    <string name="pay">pay</string>
+    <string name="what_you_like">what you like</string>
+    <string name="billing_could_not_enable">Could not enable in-app billing.</string>
+    <string name="billing_purchase_error">Error, could not complete purchase.</string>
+    <string name="billing_paypal_link_email_subject">surespot pay what you like paypal link</string>
+    <string name="billing_paypal_link_email_body">thankyou for paying what you like for surespot! the paypal link is:</string>
+    <string name="none">none</string>
+    <string name="send_to_title">send to?</string>
+    <string name="billing_bitcoin_copied_to_clipboard">%s copied to clipboard</string>
+    <string name="billing_bitcoin_email_subject">surespot pay what you like bitcoin address</string>
+    <string name="billing_bitcoin_email_body_address">thankyou for paying what you like for surespot! the bitcoin address is: %s</string>
+    <string name="billing_bitcoin_email_body_qr">the QR code can be viewed here: %s</string>
+    <string name="could_not_open_bitcoin_wallet">could not open bitcoin wallet</string>
+    <string name="message_sending">sending...</string>
+    <string name="message_loading_and_decrypting">loading and decrypting...</string>
+    <string name="could_not_login_to_server">could not login to server</string>
+    <string name="could_not_connect_to_server">could not connect to server</string>
+    <string name="autoinvite_user_exists">your friend list already contains %s</string>
+    <string name="loading_latest_messages_failed">loading latest messages failed</string>
+    <string name="could_not_delete_message">could not delete message</string>
+    <string name="could_not_delete_messages">could not delete messages</string>
+    <string name="could_not_delete_friend">could not delete friend</string>
+    <string name="could_not_set_message_lock_state">could not set message lock state</string>
+    <string name="menu_save_to_gallery">save to gallery</string>
+    <string name="menu_resend_message">resend message</string>
+    <string name="menu_lock">lock</string>
+    <string name="menu_unlock">unlock</string>
+    <string name="image_saved_to_gallery">image saved to gallery</string>
+    <string name="error_saving_image_to_gallery">error saving image to gallery</string>
+    <string name="delete_message_confirmation_title">are you sure you wish to delete this message?</string>
+    <string name="message_error_decrypting_message">ERROR DECRYPTING MESSAGE</string>
+    <string name="could_not_respond_to_invite">Could not respond to invite, please try again later.</string>
+    <string name="friend_status_is_deleted">is deleted</string>
+    <string name="friend_status_is_invited">is invited</string>
+    <string name="friend_status_is_inviting">is inviting</string>
+    <string name="menu_close_tab">close tab</string>
+    <string name="menu_assign_image">assign image</string>
+    <string name="menu_delete_all_messages">delete all messages</string>
+    <string name="menu_delete_message">delete message</string>
+    <string name="menu_delete_friend">delete friend</string>
+    <string name="delete_friend_confirmation">are you sure you wish to delete friend: %s?</string>
+    <string name="password">password</string>
+    <string name="change_password_actionbar_right">change</string>
+    <string name="change_password_progress">changing password</string>
+    <string name="could_not_change_password">could not change password</string>
+    <string name="password_changed">password changed</string>
+    <string name="delete">delete</string>
+    <string name="delete_identity_progress">deleting identity</string>
+    <string name="could_not_delete_identity">could not delete identity</string>
+    <string name="identity_deleted">identity deleted</string>
+    <string name="backup">backup</string>
+    <string name="backup_identity">backup identity %s</string>
+    <string name="identity_backed_up">identity %s backed up</string>
+    <string name="identities_backed_up">%d identities backed up</string>
+    <string name="identity_backup_complete_notification_title">identity backup complete</string>
+    <string name="newer_identity_exists">identity not restored as a newer version of the identity you are trying to restore already exists</string>
+    <string name="backed_up_identity_to_path">backed up identity %1$s to %2$s</string>
+    <string name="restore">restore</string>
+    <string name="restore_discovered_identities_location">Discovered the identities below in:\n\n\t%s\n\n click on a name to restore.</string>
+    <string name="restore_identities_none_discovered">No surespot identity (*.ssi) files discovered in\n\n\t%s\n\nplease copy your identity file(s) there. (Note: this may not be the SD card, it could be the device\'s internal storage).</string>
+    <string name="restore_identity_already_exists">not importing identity as it already exists</string>
+    <string name="restore_identity">restore %s identity</string>
+    <string name="assign">assign</string>
+    <string name="could_not_load_image">could not load image</string>
+    <string name="image">image</string>
+    <string name="pan_and_zoom">pan and zoom</string>
+    <string name="done">done</string>
+    <string name="message_error_invalid">error sending message: invalid message</string>
+    <string name="message_error_unauthorized">error sending message: unauthorized</string>
+    <string name="error_message_throttled">error sending message: throttled</string>
+    <string name="error_message_generic">error sending message</string>
+    <string name="error_message_resend">sending failed - long press to resend</string>
+    <string name="auto_identity_backup_via_google">auto identity backup via google</string>
+    <string name="via_google_play_in_app_purchase">VIA GOOGLE PLAY IN APP PURCHASE</string>
+    <string name="via_paypal">VIA PAYPAL</string>
+    <string name="open_link_in_browser">open link in browser</string>
+    <string name="send_link_in_email">send link in email</string>
+    <string name="via_bitcoin">VIA BITCOIN</string>
+    <string name="copy_address_to_clipboard">copy address to clipboard</string>
+    <string name="send_address_and_qr_code_in_email">send address and QR code in email</string>
+    <string name="open_bitcoin_wallet">open bitcoin wallet (if supported)</string>
+    <string name="select_identity">select identity</string>
+    <string name="current_password">current password</string>
+    <string name="new_password">new password</string>
+    <string name="confirm_password">confirm password</string>
+    <string name="change_password">change password</string>
+    <string name="select_none">select none</string>
+    <string name="select_all">select all</string>
+    <string name="delete_identity_message_warning">Deleting an identity will erase all messages that identity has sent. It can not be undone.</string>
+    <string name="identity_colon">identity:</string>
+    <string name="backup_location">"*backup location: "</string>
+    <string name="backup_location_note">*note: this may or may not be the SD card depending on your ROM</string>
+    <string name="invite_others">Invite others to communicate with you privately via surespot by sharing an auto-invite link with them.</string>
+    <string name="invite_via_email">invite via email</string>
+    <string name="click_to_select_email_contacts">Click the select contacts button to select email addresses from your phone contacts, and/or enter them manually.</string>
+    <string name="invite_via_text_message">invite via text message</string>
+    <string name="invite_via_other_application">invite via other application</string>
+    <string name="touch_invite_button">Touch the invite button to select application to invite with, eg. facebook, twitter.</string>
+    <string name="select_contacts">select contacts</string>
+    <string name="phone_number">phone number</string>
+    <string name="generate_new_keypairs">Generate new private key pairs for your identity and revoke the current pair. Any other devices (ie. lost or stolen phones) with the current private key pair will no longer be able to access surespot.</string>
+    <string name="username">username</string>
+    <string name="create_identity">create identity</string>
+    <string name="options">options</string>
+    <string name="clear_local_cache">clear local cache</string>
+    <string name="delete_all_messages">delete all messages</string>
+    <string name="pay_what_you_like">pay what you like</string>
+    <string name="pref_title_about">about</string>
+    <string name="pref_title_about_surespot">about surespot...</string>
+    <string name="pref_title_confirmations">confirmations</string>
+    <string name="pref_title_delete_message">delete message</string>
+    <string name="pref_title_delete_all_messages">delete all messages</string>
+    <string name="pref_title_identity_management">identity management</string>
+    <string name="pref_title_change_password">change password...</string>
+    <string name="pref_title_identity_auto_backup">identity auto backup...</string>
+    <string name="pref_title_alternate_sms_invite_to">alternate sms invite \'to\'</string>
+    <string name="pref_title_silent_error_reporting">silent error reporting</string>
+    <string name="pref_title_message_debug_mode">message debug mode</string>
+    <string name="pref_title_debug">debug</string>
+    <string name="pref_title_options">options</string>
+    <string name="pref_summary_delete_message">confirm before deleting a message</string>
+    <string name="pref_summary_delete_all_messages">confirm before deleting all messages</string>
+    <string name="pref_summary_identity_auto_backup">Backup and restore your identity automatically using Google&amp;apos;s backup servers.</string>
+    <string name="pref_summary_export_identity">Manually backup your identity to local device storage. This is in theory more secure than backing up via Google&amp;apos;s cloud, but also not as convenient.</string>
+    <string name="pref_summary_import_identity">Restore your identity from local device storage.</string>
+    <string name="pref_summary_delete_identity">Deleting an identity can not be undone.</string>
+    <string name="pref_summary_regen_keys">For the paranoid.</string>
+    <string name="pref_summary_alternate_sms_delimiter">Needs to be enabled on some devices to populate the sms \'to\' field correctly when multiple contacts are selected in invite contacts.</string>
+    <string name="pref_summary_silent_error_reporting">Silently sends error reports containing no personally identifying information to surespot developers.</string>
+    <string name="pref_summary_message_debug_mode">Shows more information about messages for debugging purposes.</string>
+    <string name="menu_invite_contacts">invite contacts</string>
+    <string name="delete_identity">delete identity</string>
 
 </resources>
