--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -267,8 +267,9 @@
     <string name="clear_local_cache">clear local cache</string>
     <string name="delete_all_messages">delete all messages</string>
     <string name="pay_what_you_like">pay what you like</string>
-    <string name="pref_title_about">about</string>
+    <string name="pref_title_general">general</string>
     <string name="pref_title_about_surespot">about surespot...</string>
+    <string name="pref_title_help">help...</string>
     <string name="pref_title_confirmations">confirmations</string>
     <string name="pref_title_delete_message">delete message</string>
     <string name="pref_title_delete_all_messages">delete all messages</string>
@@ -293,5 +294,6 @@
     <string name="menu_invite_contacts">invite contacts</string>
     <string name="pref_title_delete_identity">delete identity...</string>
     <string name="delete_identity">delete identity</string>
+    <string name="surespot_help">help</string>
 
 </resources>
